# regimetry

./: .gitignore  README.md  launch_host.py  pyproject.toml
configs/: EUR_USD_base.yaml  cluster_config.yaml  default_training_profile.yaml  embedding_config.yaml  full_config.yaml  ingest_config.yaml
dash_app/: app.py
docs/: CONFIG_REFERENCE_README.md  GETTING_STARTED_README.md  PALETTES_README.md  PIPELINE_OVERVIEW_README.md  POSITIONA_ENCODING.MD  POSITIONA_ENCODING_README.md  REFERENCES_README.md  REGIME_ASSIGNMENT_README.md  REGIME_DETECTION_README.md  REGIME_STRUCTURE_README.md  REPRODUCABILITY_README.md  TRANSFORMER_README.md  TRANSFORMER_REGIMETRY_VS_LLM_README.md
examples/: EUR_USD_processed_signals.csv
notebook/notebooks/: 01_ingest.ipynb  02_data_exploration.ipynb  03_positional_encoding.ipynb  04_tranformer_embedding_extraction.ipynb  05_clustering_and_visualization.ipynb  10_regime_forensics.ipynb  15_regime_transition_prediction_LSTM.ipynb  20_regime_transition_analysis.ipynb  21_predictive_regime_transition_modeling_catboost.ipynb  22_unsupervised_next_cluster_prediction_embedding.ipynb  50_debug_regime_assignements.ipynb  51_regime_assignments copy.ipynb  52_regime_assignment_verification.ipynb  full_cluster_profile  positional_encoding.ipynb
scripts/: analyze_batch.sh  explore_configs.sh
src/regimetry/: exception.py  host.py  logger_manager.py
src/regimetry/config/: config.py  dynamic_config_loader.py  training_profile_config.py
src/regimetry/core/: log_formatters.py
src/regimetry/models/: __init__.py  command_line_args.py  (+6 more)
(+45 files in other folders)
