[tool.poetry]
name = "regimetry"
version = "0.1.0"
description = "Unsupervised regime detection for financial time series using embeddings and clustering."
authors = ["kjpou1"]
license = "MIT"
readme = "README.md"
packages = [{ include = "regimetry", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "*"
pandas = "*"
scikit-learn = "^1.3"
matplotlib = "*"
seaborn = "*"
umap-learn = "*"
scipy = "*"
tqdm = "*"
torch = "^2.1"
transformers = "*"
python-dotenv = "^1.1.0"
dill = "^0.4.0"
tensorflow = "^2.19.0"
plotly = "^6.0.1"
nbformat = "^5.10.4"
dash = "^3.0.4"
dash-bootstrap-components = "^2.0.2"

[tool.poetry.group.dev.dependencies]
kaleido = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
